--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
     --fonte-principal: 'Inter', sans-serif;
+    --botao-azul-efeito:#3c92fa;
 
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
@@ -137,6 +138,21 @@ body{
 .lista__link > a{
     text-decoration: none;
     color: var(--branco-principal);
+}
+
+.lista__link > a:hover{
+    cursor: pointer;
+    color: var(--botao-azul);
+    transition: 0.4s;
+}
+
+.lista__link > a:active{
+    color: purple;
+}
+
+.container__botao:hover{
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
 
 
