--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body{
 }
 
 .principal{
-    background-image: url(/projeto-aluraplus/images/Background.png);
+    background-image: url(./Background.png);
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
